JSW Devsb/src/objects/Offline_Visits__c.object
<CustomObject>
    <fields>
        <fullName>APotential__c</fullName>
        <label>APotential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Sub_Type__c</fullName>
        <label>Activity Sub Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_image_to_be_captured__c</fullName>
        <label>Any image to be captured</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BP__c</fullName>
        <label>BP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BPotential__c</fullName>
        <label>BPotential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Brands__c</fullName>
        <label>Brands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CHD__c</fullName>
        <label>CHD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <label>Check In</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <label>Check Out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Condition_of_Godown__c</fullName>
        <label>Condition of Godown</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Construction_Stage__c</fullName>
        <label>Construction Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Id__c</fullName>
        <label>Converted Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_CC__c</fullName>
        <label>Damage Stock Ageing for CC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_CHD__c</fullName>
        <label>Damage Stock Ageing for CHD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_OPC__c</fullName>
        <label>Damage Stock Ageing for OPC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damage_Stock_Ageing_for_PSC__c</fullName>
        <label>Damage Stock Ageing for PSC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_CC__c</fullName>
        <label>Damaged Cement (MT) for CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_CHD__c</fullName>
        <label>Damaged Cement (MT) for CHD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_OPC__c</fullName>
        <label>Damaged Cement (MT) for OPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Damaged_Cement_MT_for_PSC__c</fullName>
        <label>Damaged Cement (MT) for PSC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_Inspection__c</fullName>
        <label>Date of Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details_of_the_Visit__c</fullName>
        <label>Details of the Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Master_Id__c</fullName>
        <label>External Master Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Visit_Id__c</fullName>
        <label>External Visit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_I_F_O_movement__c</fullName>
        <label>F.I-F.O movement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_as_on_Month_end_MT_PSC__c</fullName>
        <label>Godown Stock as on Month end (MT) PSC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_as_on_Month_end_MT_for_CC__c</fullName>
        <label>Godown Stock as on Month end (MT) for CC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_as_on_Month_end_MT_for_CHD__c</fullName>
        <label>Godown Stock as on Month end(MT) for CHD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_Stock_as_on_Month_end_MT_for_OPC__c</fullName>
        <label>Godown Stock as on Month end(MT) for OPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_CHD__c</fullName>
        <label>Godown stock (MT) for CHD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_OPC__c</fullName>
        <label>Godown stock (MT) for OPC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_PSC__c</fullName>
        <label>Godown stock (MT) for PSC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Godown_stock_MT_for_composite_Cement__c</fullName>
        <label>Godown stock (MT) for composite Cement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_CC__c</fullName>
        <label>Good Stock Ageing for CC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_CHD__c</fullName>
        <label>Good Stock Ageing for CHD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_OPC__c</fullName>
        <label>Good Stock Ageing for OPC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Good_Stock_Ageing_for_PSC__c</fullName>
        <label>Good Stock Ageing for PSC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_potential_lead_share_with_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>If potential lead, share with Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSW_Bag_Visibility__c</fullName>
        <label>JSW Bag Visibility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSW_Shop_Board_Condition__c</fullName>
        <label>JSW Shop Board Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSW_stock_level_number_of_bags__c</fullName>
        <label>JSW stock level (number of bags)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LATF_Name__c</fullName>
        <label>LATF Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <label>Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Market_Info_Master_ID__c</fullName>
        <label>Market Info Master ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <label>Master</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OPC__c</fullName>
        <label>OPC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Offline_App_CheckIn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Offline App CheckIn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSC__c</fullName>
        <label>PSC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_collected_in_current_visit__c</fullName>
        <label>Payment collected in current visit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pending_Payment_Committed_Date__c</fullName>
        <label>Pending Payment Committed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Date__c</fullName>
        <label>Planned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Inspection__c</fullName>
        <label>Previous Inspection</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSP__c</fullName>
        <label>RSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SOname__c</fullName>
        <label>SOname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seggregation_of_good_damaged_cement__c</fullName>
        <label>Seggregation of good &amp; damaged cement</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_demo_type__c</fullName>
        <label>Site demo type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stacking_pattern_As_per_ISP__c</fullName>
        <label>Stacking pattern (As per ISP?)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Id__c</fullName>
        <label>Visit Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_by_TSO_LATF__c</fullName>
        <label>Visit by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visited_Location__c</fullName>
        <label>Visited Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>WSP__c</fullName>
        <label>WSP</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>account__c</fullName>
        <label>account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>architect__c</fullName>
        <label>architect</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>category__c</fullName>
        <label>category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <label>company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>compbrands__c</fullName>
        <label>compbrands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customeremail__c</fullName>
        <label>customeremail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customername__c</fullName>
        <label>customername</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>district__c</fullName>
        <label>district</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email1__c</fullName>
        <label>email1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email2__c</fullName>
        <label>email2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email3__c</fullName>
        <label>email3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>enddt__c</fullName>
        <label>enddt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>engineer__c</fullName>
        <label>engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstname__c</fullName>
        <label>firstname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inclination__c</fullName>
        <label>inclination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>influencerName__c</fullName>
        <label>influencerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRegistered__c</fullName>
        <label>isRegistered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>leadStatus__c</fullName>
        <label>leadStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lresponse__c</fullName>
        <label>lresponse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person1__c</fullName>
        <label>person1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person2__c</fullName>
        <label>person2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>person3__c</fullName>
        <label>person3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone1__c</fullName>
        <label>phone1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone2__c</fullName>
        <label>phone2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone3__c</fullName>
        <label>phone3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalcode__c</fullName>
        <label>postalcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>potential__c</fullName>
        <label>potential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>projectSiteName__c</fullName>
        <label>projectSiteName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>role1__c</fullName>
        <label>role1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>role2__c</fullName>
        <label>role2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>role3__c</fullName>
        <label>role3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sitecount__c</fullName>
        <label>sitecount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stage__c</fullName>
        <label>stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>startdt__c</fullName>
        <label>startdt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stconsultant__c</fullName>
        <label>stconsultant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subdealers__c</fullName>
        <label>subdealers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>subtype__c</fullName>
        <label>subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>typeOfInfluencer__c</fullName>
        <label>typeOfInfluencer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type__c</fullName>
        <label>type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>volume__c</fullName>
        <label>volume</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wholesale__c</fullName>
        <label>wholesale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Offline Visits</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offline Visits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offline Visits</pluralLabel>
    <recordTypes>
        <fullName>Influencer</fullName>
        <active>true</active>
        <label>Influencer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lead</fullName>
        <active>true</active>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Info</fullName>
        <active>true</active>
        <label>Market Info</label>
    </recordTypes>
    <recordTypes>
        <fullName>Project_Site</fullName>
        <active>true</active>
        <label>Project Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Visit</fullName>
        <active>true</active>
        <label>Visit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>